--- a/file_upload_app_FINAL/file_upload_app/fileupload/templates/fileupload/upload.html
+++ b/file_upload_app_FINAL/file_upload_app/fileupload/templates/fileupload/upload.html
@@ -231,7 +231,7 @@
     <body>
         <div class="sidebar">
             <div class = "sideBarHeader">
-                <img src="https://media.licdn.com/dms/image/D560BAQEd_OgvmU6R7g/company-logo_200_200/0/1706011375138?e=2147483647&v=beta&t=3GqcZkhysmg649PBAe8H8f4kAzzL-Q9VbXwlYOCrnzk" alt="Kristu Jayanti College Logo" width="50px" height="50px">
+                <img src="https://media.licdn.com/dms/image/D560BAQEd_OgvmU6R7g/company-logo_200_200/0/1706011375138?e=2147483647&v=beta&t=3GqcZkhysmg649PBAe8H8f4kAzzL-Q9VbXwlYOCrnzk" alt="Kristu Jayanti College Logo" />
                 <h1>EPB</h1>
             </div>
             <ul class="nav-links">
