--- a/ProjectEPB/file_upload_app/fileupload/templates/fileupload/filtered_data.html
+++ b/ProjectEPB/file_upload_app/fileupload/templates/fileupload/filtered_data.html
@@ -63,30 +63,67 @@
         }
 
         th {
-            background-color: #34495e;
-            color: white;
+            color: #34495e;
         }
 
         .wrap-text {
             white-space: pre-line; /* Preserve white space and wrap text */
         }
-        .highlight {
+
+        .highlighted-row {
             background-color: #ed3726; /* Light red background for F grade rows */
+        }
+
+        @media print {
+            .print-button {
+                display: none;
+            }
+
+            .content-container {
+                border: none;
+                box-shadow: none;
+            }
+
+            thead {
+                display: table-header-group; /* Ensure the table header is displayed */
+            }
+
+            thead th:not(:first-child) {
+                visibility: visible; /* Ensure all table headers are visible */
+            }
+
+            thead {
+                visibility: visible; /* Ensure visibility on first page */
+            }
+
+            tbody, tfoot {
+                break-inside: avoid; /* Avoid breaking inside rows */
+                break-after: auto; /* Allow breaks after table */
+            }
+
+            thead, tfoot {
+                display: table-row-group;
+                break-after: avoid; /* Prevent break after thead */
+            }
+
+            tbody tr {
+                page-break-inside: avoid; /* Avoid breaking inside rows */
+                page-break-after: auto; /* Allow breaks after rows */
+            }
         }
     </style>
 </head>
 <body>
 <div class="content-container">
-    <h2>DATA</h2>
-    <button class="print-button" onclick="window.print()">Print</button>
+    <button class="print-button" onclick="window.print()">Print</button><br>
     <table>
         <thead>
             <tr>
                 <th>SUBJECT NAME : </th>
                 <th>SA MIN MARKS : </th>
                 <th>SA MAX MARKS : </th>
-                <th>AGGREGATE MIN MARKS : </th>
-                <th>AGGREGATE MAX MARKS : </th>
+                <th>AGGREGATE MIN MARKS: </th>
+                <th>AGGREGATE MAX MARKS: </th>
             </tr>
         </thead>
         <tbody>
@@ -113,7 +150,7 @@
         </thead>
         <tbody>
         {% for data in report_data %}
-            <tr class="{% if data.obt_grade == 'F' or data.obt_grade == 'AB'  %}highlight{% endif %}">
+            <tr{% if data.obt_grade == 'AB' or data.obt_grade == 'F' %} class="highlighted-row" {% endif %}>
                 <td>{{ data.roll_no }}</td>
                 <td class="wrap-text">{{ data.student_name }}</td>
                 <td class="wrap-text">{{ data.batch_name }}</td>
